@@ -25,15 +25,8 @@ src="http://gnome.org/img/logo/text-64" />Fantasdic</a></h1>
 
 	<h2>What is Fantasdic?</h2>
 
-	<p><strong>Fantasdic</strong> is a DICT client (RFC 2229). This is a
-dictionary application which uses the network to retrieve definitions. For
-example, <a href="http://www.nihongobenkyo.org">nihongobenkyo.org</a> is a
-server that provides Japanese dictionaries. Add it to the settings in Fantasdic
-and voilà, you can now look up Japanese words using Fantasdic. Another
-well-known server with tons of dictionaries is <a
-href="http://www.dict.org">dict.org</a>.</p>
-
-<p><strong>Fantasdic</strong> is primarily targetting the <a
+	<p><strong>Fantasdic</strong> is a dictionary application. It allows to
+look up words in various dictionary sources. It is primarily targetting the <a
 href="http://www.gnome.org/">GNOME</a> desktop but it should work with other
 platforms, including Windows. Fantasdic is <a
 href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.</p>
@@ -44,6 +37,28 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.</p>
 		<h2>Features</h2>
 
 		<div class="feature">
+            <h4>Supported sources</h4>
+
+            <p>Dictionary sources may be of various types such as files,
+            databases, websites or servers. Currently supported dictionary
+            sources are:</p>
+
+            <ul>
+                <li><strong>DICT dictionary server</strong>: look up words
+in dictionary servers like dict.org or nihongobenkyo.org
+(<a href="http://luetzschena-stahmeln.de/dictd/index.php">list of
+servers</a>).</li>
+                <li><strong>EDICT file</strong>: look up words in any dictionary
+available in this format like <a
+href="http://www.csse.monash.edu.au/~jwb/j_edict.html">edict</a> or
+<a href="http://www.mandarintools.com/cedict.html">cedict</a>.</li>
+                <li><strong>Google Translate</strong>: translate words with
+Google Translate directly from Fantasdic.</li>
+            </ul>
+
+            <p>Thanks to its flexible architecture, Fantasdic can be easily
+            extended to support more dictionary sources.</p>
+
 			<h4>Configure your dictionaries</h4>
 
 
@@ -51,22 +66,12 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.</p>
        
             <img src="images/fantasdic4.png" alt="[Fantasdic screenshot]" />
 
-        <p>
-        Servers generally provide a lot of different dictionaries. With
-        Fantasdic, you can select the dictionaries of your choice. You define a
-        server (e.g. dict.org), select dictionaries of your choice and give a
-        name to your dictionary.
-        </p>
+        <p>Fantasdic comes with pre-configured dictionaries but
+           dictionaries can be changed or added in the
+settings at any time.</p>
 
         <img src="images/fantasdic2.png" alt="[Fantasdic screenshot]" />
 
-        <p>You can this way define several dictionaries from several different
-        servers. Dictionaries are of course not limited to language
-        dictionaries.</p>
-
-		</div>
-
-        <div class="feature">
             <h4>Scan clipboard</h4>
 
         <p>
@@ -80,25 +85,14 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.</p>
 
 	</div>
 
-    <div id="servers">
-        <h2>Servers</h2>
-
-<p>Once Fantasdic is installed, you'll need to find servers. Some public
-servers with a wide range of dictionaries can be found on the internet. A list
-is available <a
-href="http://luetzschena-stahmeln.de/dictd/index.php">here</a>. You may also run
-your own server on your local machine or network using the <em>dictd</em>
-server. Fantasdic is distributed with command-line tools that ease the
-conversion from existing dictionary formats (including stardict) to the format
-used by dictd.</p>
-
-    </div>
-
     <div id="development">
     <h2>Development</h2>
     <p>If you're interested in the development of Fantasdic, you can get the
 latest development version using this command:</p>
 <p>$ svn checkout http://svn.gnome.org/svn/fantasdic/trunk</p>
+
+<p>You can also browse the source code with the <a
+href="http://svn.gnome.org/viewcvs/fantasdic/">web interface</a>.</p>
     </div>
 
 </div>
@@ -113,8 +107,15 @@ latest development version using this command:</p>
 there or are looking for the latest version, try the link below.
 	</p>
 
+    <p>[fantasdic-1.0-beta5]</p>
+
 	<p>
-	<a href="http://www.mblondel.org/files/fantasdic/">Download Fantasdic!</a>
+	<a
+href="http://www.mblondel.org/files/fantasdic/fantasdic-1.0-beta5.tar.gz">Source
+code</a><br /><br />
+<a
+href="http://www.mblondel.org/files/fantasdic/fantasdic-1.0-beta5-mswin32.zip">
+Bundle for Windows</a>
 	</p>
 
   </div>
@@ -128,7 +129,7 @@ there or are looking for the latest version, try the link below.
 	</p>
 
 	<p>Testing and <a href="http://bugzilla.gnome.org">reporting</a> bugs.</p>
-	<p>Developing. You can find the latest source code in the GNOME CVS,
+	<p>Developing. You can find the latest source code in the GNOME SVN,
 fantasdic module.</p>
 	<p>Translating, localize the user interface and documentation for your
 language.</p>
@@ -136,9 +137,11 @@ language.</p>
 	</div>
 
 	<div id="contact">
-	<h2>Contact</h2>
+	<h2>Mailing-list</h2>
 
-	<p>Fantasdic needs a mailing-list on the GNOME server.</p>
+	<p><a
+href="http://mail.gnome.org/mailman/listinfo/fantasdic-list">fantasdic-list
+info</a></p>
 
   </div>
 
