@@ -1,3 +1,8 @@
+2008-01-06  Mathieu Blondel <mblondel@svn.gnome.org>
+
+	* www.gnome.org/projects/fantasdic/index.html: Updated for 1.0-beta5
+	release of Fantasdic.
+
 2007-12-24  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/data/screenshots/cheese-0.3.0.jpg,
